--- a/ImoocMemo.org
+++ b/ImoocMemo.org
@@ -22,3 +22,42 @@ the login method need two arrtibute. first is request, two is user.
   # settings.py
   AUTHTICATION_BACKEND = ['UserInfo.views.CustomBackend', ]
 #+END_SRC
+*** captcha
+pip install django-simple-captcha
+
+# settings.py
+# install
+'captcha'
+
+# forms.py
+from captcha.fields import CaptchaField
+
+
+class RegisterForm(forms.Form):
+    email = forms.EmailField(required=True)
+    password = forms.CharField(required=True, min_length=6)
+    captcha = CaptchaField(error_messages={'invalid': '验证码错误'})
+
+# views
+from .models import RegisterForm
+
+class  RegisterView(View):
+    register_form = RegisterForm()
+    return render(request, 'register.html', {
+        'register_form': register_form,
+})
+# html
+{{ register_form.captcha }}
+*** send_email
+# settins.py
+EMAIL_HOST = 'smtp.sina.com'
+EMAIL_PORT = 25
+EMAIL_HOST_USER = '18358928574@sina.cn'
+EMAIL_HOST_PASSWORD = 'yumo20160628'
+EMAIL_USE_TLS = True
+EMAIL_FROM = '18358928574@sina.cn'
+# send_email.py
+from django.core.mail import send_mail
+email_title = ''
+email_body = ''
+email_status = send_mail(email_title, email_body, EMAIL_FROM, [email])
