--- a/ImoocMemo.org
+++ b/ImoocMemo.org
@@ -84,3 +84,6 @@ MEDIA_ROOT = os.path.join(BASE_DIR, 'media')
 *** get foreinkey nums
 def get_teacher_nums(self):
     return self.teacher_set.all().count()
+
+*** Stringformat
+{{ city.id|stringformat:'i' %}
